added test report and patient profile features

--- a/userAuth/templates/userAuth/baseUserDash.html
+++ b/userAuth/templates/userAuth/baseUserDash.html
@@ -262,6 +262,23 @@
             location.href = "/accounts/logout/"
         }
 
+        // for staff user functions 
+
+        function addNonRegPatient()
+        {
+            location.href = "/accounts/addNonRegUser"
+        }
+
+        function viewAllNonRegPatient()
+        {
+            location.href = "/accounts/viewPatients/"
+        }
+
+        function viewDoctors()
+        {
+            location.href = "/accounts/viewDoctorsList"
+        }
+
     </script>
 
 </body>
