--- a/userAuth/templates/userAuth/userDashHome.html
+++ b/userAuth/templates/userAuth/userDashHome.html
@@ -92,7 +92,87 @@
 {% endif %}
     
 {% if request.user|has_group:"staff" %}
-    Welcome to staff dashboard {{request.user.username}}
+<div class="row gap-2 gy-4 justify-content-between mt-3">
+
+    <div onclick="addNonRegPatient()" class="col-5 col-md-3 bg-primary dashboard-card">
+        <div class="row gy-3 justify-content-between p-1">
+            <div class="col-12">
+               <span style="color: white;"><i class="fa-solid fa-hospital-user fa-5x"></i></span> 
+            </div>
+
+            <div class="col-12">
+                <h5 style="color: white;">Add patient</h5>
+            </div>
+        </div>
+    </div>
+
+    <div onclick="viewAllNonRegPatient()"  class="col-5 col-md-3  bg-dark dashboard-card">
+        <div class="row gy-3 justify-content-between p-1">
+
+            <div class="col-12">
+               <span style="color: white;"><i class="fa-solid fa-user-group fa-5x"></i></span> 
+            </div>
+
+            <div class="col-12">
+                <h5 style="color: white;">View patient</h5>
+            </div>
+        </div>
+    </div>
+
+    <div onclick="viewDoctors()"  class="col-5 col-md-3  bg-success dashboard-card">
+        <div class="row gy-3 justify-content-between p-1">
+
+            <div class="col-12">
+               <span style="color: white;"><i class="fa-solid fa-user-doctor fa-5x"></i></span> 
+            </div>
+
+            <div class="col-12">
+                <h5 style="color: white;">View doctors</h5>
+            </div>
+        </div>
+    </div>
+
+    <div onclick="editProfile()"  class="col-5 col-md-3  bg-warning dashboard-card">
+        <div class="row gy-3 justify-content-between p-1">
+
+            <div class="col-12">
+               <span style="color: white;"><i class="fas fa-edit fa-5x"></i></span> 
+            </div>
+
+            <div class="col-12">
+                <h5 style="color: white;">Edit profile</h5>
+            </div>
+        </div>
+    </div>
+
+
+    <div onclick="changePassword()"  class="col-5 col-md-3  bg-info dashboard-card">
+        <div class="row gy-3 justify-content-between p-1">
+
+            <div class="col-12">
+               <span style="color: white;"><i class="fa-solid fa-lock fa-5x"></i></span> 
+            </div>
+
+            <div class="col-12">
+                <h5 style="color: white;">Change password</h5>
+            </div>
+        </div>
+    </div>
+
+    <div onclick="userLogout()"  class="col-5 col-md-3  bg-danger dashboard-card">
+        <div class="row gy-3 justify-content-between p-1">
+
+            <div class="col-12">
+               <span style="color: white;"><i class="fa fa-sign-out fa-5x"></i></span> 
+            </div>
+
+            <div class="col-12">
+                <h5 style="color: white;">Logout</h5>
+            </div>
+        </div>
+    </div>
+
+</div>
 {% endif %}
 
 {% if request.user|has_group:"doctor" %}
