--- a/userAuth/templates/userAuth/viewDoctorMyAppointment.html
+++ b/userAuth/templates/userAuth/viewDoctorMyAppointment.html
@@ -9,7 +9,7 @@
 {% if request.user.is_authenticated %}
 
 {% if request.user|has_group:"doctor" %}
-<div class="container">
+<div style="background-color: #ced7d8; min-height: 90vh;" class="container p-3">
 
     <div class="appointment-lists-container mt-3">
         <h4 class="mt-3 mb-3">Appointment Date</h4>
@@ -18,26 +18,20 @@
             <!-- <button id="day1"  type="button" class="btn btn-light btn-outline-primary"></button> -->
             <a href="{% url 'viewMyAppDoc' 1 %}"><button id="day1" type="button"
                     class="btn btn-light">Today</button></a>
-            <a href="{% url 'viewMyAppDoc' 2 %}"><button id="day2" type="button"
-                    class="btn btn-light"></button></a>
-            <a href="{% url 'viewMyAppDoc' 3 %}"><button id="day3" type="button"
-                    class="btn btn-light"></button></a>
-            <a href="{% url 'viewMyAppDoc' 4 %}"><button id="day4" type="button"
-                    class="btn btn-light"></button></a>
-            <a href="{% url 'viewMyAppDoc' 5 %}"><button id="day5" type="button"
-                    class="btn btn-light"></button></a>
-            <a href="{% url 'viewMyAppDoc' 6 %}"><button id="day6" type="button"
-                    class="btn btn-light"></button></a>
-            <a href="{% url 'viewMyAppDoc' 7 %}"><button id="day7" type="button"
-                    class="btn btn-light"></button></a>
+            <a href="{% url 'viewMyAppDoc' 2 %}"><button id="day2" type="button" class="btn btn-light"></button></a>
+            <a href="{% url 'viewMyAppDoc' 3 %}"><button id="day3" type="button" class="btn btn-light"></button></a>
+            <a href="{% url 'viewMyAppDoc' 4 %}"><button id="day4" type="button" class="btn btn-light"></button></a>
+            <a href="{% url 'viewMyAppDoc' 5 %}"><button id="day5" type="button" class="btn btn-light"></button></a>
+            <a href="{% url 'viewMyAppDoc' 6 %}"><button id="day6" type="button" class="btn btn-light"></button></a>
+            <a href="{% url 'viewMyAppDoc' 7 %}"><button id="day7" type="button" class="btn btn-light"></button></a>
 
 
         </div>
 
         <div class="appointed-patient-container mt-4">
-            <h4 class="mt-3 mt-3">Appointments</h4>
+            <h4 class="mt-3 mt-3 py-3">Appointments</h4>
             <div class="table-responsive">
-                <table class="table table-striped table-hover">
+                <table class="table table-striped table-light table-hover">
                     <thead>
                         <tr>
                             <th scope="col">#</th>
@@ -66,7 +60,7 @@
                             <td>{{app.appointmentTime}}</td>
                             <td>{{app.appointmentStatus}}</td>
                             <td>{{app.paymentStatus}}</td>
-                            <td>actions</td>
+                            <td> {% if app.patient %} <a href="{% url 'patientprofile' app.id %}"><button class="btn btn-sm btn-primary">View profile</button></a> {% endif %}</td>
                         </tr>
 
                         {% endfor %}
