added test result view features in regestered user dashboard and added features to view regstered users profile

--- a/userAuth/static/userAuth/css/style.css
+++ b/userAuth/static/userAuth/css/style.css
@@ -171,3 +171,9 @@
     text-align: center;
     cursor: pointer;
 }
+
+.testreport-form-container h5{
+    background-color: plum;
+     padding: 5px 0px 5px 0px; 
+     text-align: center; color: white;
+    }
