--- a/userAuth/templates/userAuth/userDashHome.html
+++ b/userAuth/templates/userAuth/userDashHome.html
@@ -106,7 +106,7 @@
         </div>
     </div>
 
-    <div onclick="viewAllNonRegPatient()"  class="col-5 col-md-3  bg-dark dashboard-card">
+    <div onclick="viewAllNonRegPatient()"  class="col-5 col-md-3  bg-secondary dashboard-card">
         <div class="row gy-3 justify-content-between p-1">
 
             <div class="col-12">
@@ -114,7 +114,20 @@
             </div>
 
             <div class="col-12">
-                <h5 style="color: white;">View patient</h5>
+                <h5 style="color: white;">View non reg patients</h5>
+            </div>
+        </div>
+    </div>
+
+    <div onclick="viewAllRegPatient()"  class="col-5 col-md-3  bg-dark dashboard-card">
+        <div class="row gy-3 justify-content-between p-1">
+
+            <div class="col-12">
+               <span style="color: white;"><i class="fa-solid fa-user-group fa-5x"></i></span> 
+            </div>
+
+            <div class="col-12">
+                <h5 style="color: white;">View reg patients</h5>
             </div>
         </div>
     </div>
