added server side integration of payment gateway

--- a/mainApp/templates/mainApp/finddoctor.html
+++ b/mainApp/templates/mainApp/finddoctor.html
@@ -29,7 +29,7 @@
           <a href="{% url 'doctorprofile' doctor.id %}"><button class="btn" style="background-color: #B7274C;"> <span
             style="font-size: 12px; color: white;">View Profile</span> </button></a>
 
-            <a href="#"><button class="btn " style="background-color: #164A96;;"><span
+            <a href="{% url 'bookreguserappointment' %}"><button class="btn " style="background-color: #164A96;;"><span
               style="font-size: 12px; color: white;">Book Appointment</span></button></a>
 
           {% endif %}
