--- a/userAuth/templates/userAuth/userDashHome.html
+++ b/userAuth/templates/userAuth/userDashHome.html
@@ -6,150 +6,53 @@
 {% block userDashContent %}
 
 {% if request.user|has_group:"patient" %}
-   <!-- <h1>Welcome to patient dashboard {{request.user.username}}</h1>  -->
+<!-- <h1>Welcome to patient dashboard {{request.user.username}}</h1>  -->
 
-   <div class="row gap-2 gy-4 justify-content-between mt-3">
-
-        <div onclick="redirectToRegBookApp()" class="col-5 col-md-3 bg-primary dashboard-card">
-            <div class="row gy-3 justify-content-between p-1">
-                <div class="col-12">
-                   <span style="color: white;"><i class="fa-solid fa-calendar-plus fa-5x"></i></span> 
-                </div>
-
-                <div class="col-12">
-                    <h5 style="color: white;">Book appointment</h5>
-                </div>
-            </div>
-        </div>
-
-        <div onclick="redirectToRegViewApp()"  class="col-5 col-md-3  bg-dark dashboard-card">
-            <div class="row gy-3 justify-content-between p-1">
-
-                <div class="col-12">
-                   <span style="color: white;"><i class="fa-solid fa-calendar-check fa-5x"></i></span> 
-                </div>
-
-                <div class="col-12">
-                    <h5 style="color: white;">View appointmentt</h5>
-                </div>
-            </div>
-        </div>
-
-        <div onclick="redirectToRegTestResult()"  class="col-5 col-md-3  bg-success dashboard-card">
-            <div class="row gy-3 justify-content-between p-1">
-
-                <div class="col-12">
-                   <span style="color: white;"><i class="fa-solid fa-vial-circle-check fa-5x"></i></span> 
-                </div>
-
-                <div class="col-12">
-                    <h5 style="color: white;">Test report</h5>
-                </div>
-            </div>
-        </div>
-
-        <div onclick="editProfile()"  class="col-5 col-md-3  bg-warning dashboard-card">
-            <div class="row gy-3 justify-content-between p-1">
-
-                <div class="col-12">
-                   <span style="color: white;"><i class="fas fa-edit fa-5x"></i></span> 
-                </div>
-
-                <div class="col-12">
-                    <h5 style="color: white;">Edit profile</h5>
-                </div>
-            </div>
-        </div>
-
-
-        <div onclick="changePassword()"  class="col-5 col-md-3  bg-info dashboard-card">
-            <div class="row gy-3 justify-content-between p-1">
-
-                <div class="col-12">
-                   <span style="color: white;"><i class="fa-solid fa-lock fa-5x"></i></span> 
-                </div>
-
-                <div class="col-12">
-                    <h5 style="color: white;">Change password</h5>
-                </div>
-            </div>
-        </div>
-
-        <div onclick="userLogout()"  class="col-5 col-md-3  bg-danger dashboard-card">
-            <div class="row gy-3 justify-content-between p-1">
-
-                <div class="col-12">
-                   <span style="color: white;"><i class="fa fa-sign-out fa-5x"></i></span> 
-                </div>
-
-                <div class="col-12">
-                    <h5 style="color: white;">Logout</h5>
-                </div>
-            </div>
-        </div>
-
-   </div>
-{% endif %}
-    
-{% if request.user|has_group:"staff" %}
 <div class="row gap-2 gy-4 justify-content-between mt-3">
 
-    <div onclick="addNonRegPatient()" class="col-5 col-md-3 bg-primary dashboard-card">
+    <div onclick="redirectToRegBookApp()" class="col-5 col-md-3 bg-primary dashboard-card">
         <div class="row gy-3 justify-content-between p-1">
             <div class="col-12">
-               <span style="color: white;"><i class="fa-solid fa-hospital-user fa-5x"></i></span> 
+                <span style="color: white;"><i class="fa-solid fa-calendar-plus fa-5x"></i></span>
             </div>
 
             <div class="col-12">
-                <h5 style="color: white;">Add patient</h5>
+                <h5 style="color: white;">Book appointment</h5>
             </div>
         </div>
     </div>
 
-    <div onclick="viewAllNonRegPatient()"  class="col-5 col-md-3  bg-secondary dashboard-card">
+    <div onclick="redirectToRegViewApp()" class="col-5 col-md-3  bg-dark dashboard-card">
         <div class="row gy-3 justify-content-between p-1">
 
             <div class="col-12">
-               <span style="color: white;"><i class="fa-solid fa-user-group fa-5x"></i></span> 
+                <span style="color: white;"><i class="fa-solid fa-calendar-check fa-5x"></i></span>
             </div>
 
             <div class="col-12">
-                <h5 style="color: white;">View non reg patients</h5>
+                <h5 style="color: white;">View appointmentt</h5>
             </div>
         </div>
     </div>
 
-    <div onclick="viewAllRegPatient()"  class="col-5 col-md-3  bg-dark dashboard-card">
+    <div onclick="redirectToRegTestResult()" class="col-5 col-md-3  bg-success dashboard-card">
         <div class="row gy-3 justify-content-between p-1">
 
             <div class="col-12">
-               <span style="color: white;"><i class="fa-solid fa-user-group fa-5x"></i></span> 
+                <span style="color: white;"><i class="fa-solid fa-vial-circle-check fa-5x"></i></span>
             </div>
 
             <div class="col-12">
-                <h5 style="color: white;">View reg patients</h5>
+                <h5 style="color: white;">Test report</h5>
             </div>
         </div>
     </div>
 
-    <div onclick="viewDoctors()"  class="col-5 col-md-3  bg-success dashboard-card">
+    <div onclick="editProfile()" class="col-5 col-md-3  bg-warning dashboard-card">
         <div class="row gy-3 justify-content-between p-1">
 
             <div class="col-12">
-               <span style="color: white;"><i class="fa-solid fa-user-doctor fa-5x"></i></span> 
-            </div>
-
-            <div class="col-12">
-                <h5 style="color: white;">View doctors</h5>
-            </div>
-        </div>
-    </div>
-
-    <div onclick="editProfile()"  class="col-5 col-md-3  bg-warning dashboard-card">
-        <div class="row gy-3 justify-content-between p-1">
-
-            <div class="col-12">
-               <span style="color: white;"><i class="fas fa-edit fa-5x"></i></span> 
+                <span style="color: white;"><i class="fas fa-edit fa-5x"></i></span>
             </div>
 
             <div class="col-12">
@@ -159,11 +62,11 @@
     </div>
 
 
-    <div onclick="changePassword()"  class="col-5 col-md-3  bg-info dashboard-card">
+    <div onclick="changePassword()" class="col-5 col-md-3  bg-info dashboard-card">
         <div class="row gy-3 justify-content-between p-1">
 
             <div class="col-12">
-               <span style="color: white;"><i class="fa-solid fa-lock fa-5x"></i></span> 
+                <span style="color: white;"><i class="fa-solid fa-lock fa-5x"></i></span>
             </div>
 
             <div class="col-12">
@@ -172,11 +75,108 @@
         </div>
     </div>
 
-    <div onclick="userLogout()"  class="col-5 col-md-3  bg-danger dashboard-card">
+    <div onclick="userLogout()" class="col-5 col-md-3  bg-danger dashboard-card">
         <div class="row gy-3 justify-content-between p-1">
 
             <div class="col-12">
-               <span style="color: white;"><i class="fa fa-sign-out fa-5x"></i></span> 
+                <span style="color: white;"><i class="fa fa-sign-out fa-5x"></i></span>
+            </div>
+
+            <div class="col-12">
+                <h5 style="color: white;">Logout</h5>
+            </div>
+        </div>
+    </div>
+
+</div>
+{% endif %}
+
+{% if request.user|has_group:"staff" %}
+<div class="row gap-2 gy-4 justify-content-between mt-3">
+
+    <div onclick="addNonRegPatient()" class="col-5 col-md-3 bg-primary dashboard-card">
+        <div class="row gy-3 justify-content-between p-1">
+            <div class="col-12">
+                <span style="color: white;"><i class="fa-solid fa-hospital-user fa-5x"></i></span>
+            </div>
+
+            <div class="col-12">
+                <h5 style="color: white;">Add patient</h5>
+            </div>
+        </div>
+    </div>
+
+    <div onclick="viewAllNonRegPatient()" class="col-5 col-md-3  bg-secondary dashboard-card">
+        <div class="row gy-3 justify-content-between p-1">
+
+            <div class="col-12">
+                <span style="color: white;"><i class="fa-solid fa-user-group fa-5x"></i></span>
+            </div>
+
+            <div class="col-12">
+                <h5 style="color: white;">View non reg patients</h5>
+            </div>
+        </div>
+    </div>
+
+    <div onclick="viewAllRegPatient()" class="col-5 col-md-3  bg-dark dashboard-card">
+        <div class="row gy-3 justify-content-between p-1">
+
+            <div class="col-12">
+                <span style="color: white;"><i class="fa-solid fa-user-group fa-5x"></i></span>
+            </div>
+
+            <div class="col-12">
+                <h5 style="color: white;">View reg patients</h5>
+            </div>
+        </div>
+    </div>
+
+    <div onclick="viewDoctors()" class="col-5 col-md-3  bg-success dashboard-card">
+        <div class="row gy-3 justify-content-between p-1">
+
+            <div class="col-12">
+                <span style="color: white;"><i class="fa-solid fa-user-doctor fa-5x"></i></span>
+            </div>
+
+            <div class="col-12">
+                <h5 style="color: white;">View doctors</h5>
+            </div>
+        </div>
+    </div>
+
+    <div onclick="editProfile()" class="col-5 col-md-3  bg-warning dashboard-card">
+        <div class="row gy-3 justify-content-between p-1">
+
+            <div class="col-12">
+                <span style="color: white;"><i class="fas fa-edit fa-5x"></i></span>
+            </div>
+
+            <div class="col-12">
+                <h5 style="color: white;">Edit profile</h5>
+            </div>
+        </div>
+    </div>
+
+
+    <div onclick="changePassword()" class="col-5 col-md-3  bg-info dashboard-card">
+        <div class="row gy-3 justify-content-between p-1">
+
+            <div class="col-12">
+                <span style="color: white;"><i class="fa-solid fa-lock fa-5x"></i></span>
+            </div>
+
+            <div class="col-12">
+                <h5 style="color: white;">Change password</h5>
+            </div>
+        </div>
+    </div>
+
+    <div onclick="userLogout()" class="col-5 col-md-3  bg-danger dashboard-card">
+        <div class="row gy-3 justify-content-between p-1">
+
+            <div class="col-12">
+                <span style="color: white;"><i class="fa fa-sign-out fa-5x"></i></span>
             </div>
 
             <div class="col-12">
@@ -189,7 +189,62 @@
 {% endif %}
 
 {% if request.user|has_group:"doctor" %}
-    Welcome to doctor dashboard {{request.user.username}}
+<div class="row gap-2 gy-4 justify-content-between mt-3">
+
+    <div onclick="myPatientsAppointmentt()" class="col-5 col-md-3 bg-secondary dashboard-card">
+        <div class="row gy-3 justify-content-between p-1">
+            <div class="col-12">
+                <span style="color: white;"><i class="fa-solid fa-calendar-check fa-5x"></i></span>
+            </div>
+
+            <div class="col-12">
+                <h5 style="color: white;">My patients</h5>
+            </div>
+        </div>
+    </div>
+
+    <div onclick="editProfile()" class="col-5 col-md-3  bg-warning dashboard-card">
+        <div class="row gy-3 justify-content-between p-1">
+
+            <div class="col-12">
+                <span style="color: white;"><i class="fas fa-edit fa-5x"></i></span>
+            </div>
+
+            <div class="col-12">
+                <h5 style="color: white;">Edit profile</h5>
+            </div>
+        </div>
+    </div>
+
+
+    <div onclick="changePassword()" class="col-5 col-md-3  bg-info dashboard-card">
+        <div class="row gy-3 justify-content-between p-1">
+
+            <div class="col-12">
+                <span style="color: white;"><i class="fa-solid fa-lock fa-5x"></i></span>
+            </div>
+
+            <div class="col-12">
+                <h5 style="color: white;">Change password</h5>
+            </div>
+        </div>
+    </div>
+
+    <div onclick="userLogout()" class="col-5 col-md-3  bg-danger dashboard-card">
+        <div class="row gy-3 justify-content-between p-1">
+
+            <div class="col-12">
+                <span style="color: white;"><i class="fa fa-sign-out fa-5x"></i></span>
+            </div>
+
+            <div class="col-12">
+                <h5 style="color: white;">Logout</h5>
+            </div>
+        </div>
+    </div>
+
+
+</div>
 {% endif %}
-    
+
 {% endblock userDashContent %}
