--- a/appointment/templates/appointment/myappointments.html
+++ b/appointment/templates/appointment/myappointments.html
@@ -5,6 +5,7 @@
 
 {% block userDashContent %}
 {% if request.user|has_group:"patient" %}
+<h4 class="mb-3">My appointments </h4>
 {% if myAppointments %}
 <div class="table-responsive">
     <table class="table table-striped table-hover">
@@ -33,8 +34,10 @@
                 <td>{{appointment.appointmentStatus}}</td>
                 <td>{{appointment.paymentStatus}}</td>
                 <td class="d-flex gap-3">
-                    {% if appointment.paymentStatus == 'pending'%}  <button id="payment-button" class="btn btn-sm btn-outline-success">Pay with khalti</button>{% endif %}
-                   <Button onclick="delUserAppointment('{{appointment.id}}')" class="btn btn-sm btn-danger"><i class="fa-solid fa-calendar-check"></i> Cancel</Button> 
+                    {% if appointment.paymentStatus == 'pending'%}  <button id="payment-button" class="btn btn-sm btn-success">Pay with khalti</button>
+                   <Button onclick="delUserAppointment('{{appointment.id}}')" class="btn btn-sm btn-danger"><i class="fa-solid fa-calendar-check"></i> Cancel</Button>{% else %} 
+                    <button class="btn btn-sm btn-warning"><i class="fa-solid fa-file-invoice"></i> Print invoice</button>
+                   {% endif %}
                 </td>
             </tr>
 
@@ -45,6 +48,40 @@
 
 {% else %}
 <h4 style="text-align: center;" class="bg-success p-2 text-dark bg-opacity-50 p-3 mt-5">You have no appointments</h4>
+{% endif %}
+
+<h3 class="mb-3 mt-3">My past appointments</h3>
+{% if myPastAppointments %}
+<div class="table-responsive">
+    <table class="table table-striped table-hover">
+        <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Appointment id</th>
+                <th scope="col">Doctor</th>
+                <th scope="col">Date</th>
+                <th scope="col">Time</th>
+            </tr>
+        </thead>
+
+
+        <tbody>
+            {% for appointment in myAppointments %}
+            <tr>
+                <th scope="row">{{forloop.counter}}</th>
+                <td>{{appointment.id}}</td>
+                <td>{{appointment.doctor.fullName}}</td>
+                <td>{{appointment.appointmentDate}}</td>
+                <td>{{appointment.appointmentTime}}</td>
+            </tr>
+
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
+
+{% else %}
+<h4 style="text-align: center;" class="bg-success p-2 text-dark bg-opacity-50 p-3 mt-5">You have no past appointments</h4>
 {% endif %}
 
 {% endif %}
