--- a/userAuth/templates/userAuth/viewDoctorMyAppointment.html
+++ b/userAuth/templates/userAuth/viewDoctorMyAppointment.html
@@ -60,7 +60,7 @@
                             <td>{{app.appointmentTime}}</td>
                             <td>{{app.appointmentStatus}}</td>
                             <td>{{app.paymentStatus}}</td>
-                            <td> {% if app.patient %} <a href="{% url 'patientprofile' app.id %}"><button class="btn btn-sm btn-primary">View profile</button></a> {% endif %}</td>
+                            <td> {% if app.patient %} <a href="{% url 'patientprofile' app.patient.id %}"><button class="btn btn-sm btn-primary">View profile</button></a> {% endif %}</td>
                         </tr>
 
                         {% endfor %}
