--- a/mainApp/templates/mainApp/base.html
+++ b/mainApp/templates/mainApp/base.html
@@ -10,6 +10,9 @@
   <link rel="stylesheet" href="{% static 'mainApp/css/style.css'%}">
   <link rel="stylesheet" href="{% static 'userAuth/css/style.css'%}">
 
+  <script src="https://kit.fontawesome.com/9408609606.js" crossorigin="anonymous"></script>
+
+
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
