--- a/mainApp/templates/mainApp/index.html
+++ b/mainApp/templates/mainApp/index.html
@@ -5,8 +5,8 @@
 
 
 {% block slider %}
-<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-    <div style="height: 80vh;" class="carousel-inner">
+<div style="border-top:5px solid #0AB8B7; border-bottom: 5px solid #0AB8B7;" id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div style="max-height: 80vh;" class="carousel-inner">
       <div class="carousel-item active">
         <img src="{% static 'mainApp/images/cover1.png' %}" class="d-block img-fluid" alt="coverimage 1"> 
       </div>
@@ -27,3 +27,95 @@
     </button>
   </div>
 {% endblock slider %}
+
+
+{% block mainContent %}
+
+<div class="container-fluid mt-3">
+  <h4 style="color: #0AB8B7;" class="text-center py-3">Why Us?</h4>
+  <div class="row justify-content-between">
+    <div class="col-md-3 col-12 text-center p-3">
+
+      <span style="color: #0AB8B7;"><i class="fa-solid fa-briefcase-medical fa-4x"></i></span>
+      <h5 class="mt-2">ADVANCED TECHNOLOGY</h5>
+      <p>Nepal Hospital combines the finest medical minds and advanced technology to provide holistic treatment within a Multi-Disciplinary Framework</p>
+    </div>
+    <div class="col-md-3 col-12 text-center p-3">
+     <span style="color: #0AB8B7;"><i class="fa-solid fa-user-doctor fa-4x"></i></span> 
+      <h5 class="mt-2">HEALTHCARE SOLUTIONS</h5>
+      <p>Our hospital aims to meet the standards of Joint Commission International for Patient Safety and Standards. </p>
+
+    </div>
+    <div class="col-md-3 col-12 text-center p-3">
+     <span style="color: #0AB8B7;"><i class="fa-solid fa-truck-medical fa-4x"></i></span> 
+      <h5 class="mt-2">24/7 AVAILABILITY</h5>
+      <p>who are experienced in aviation & expedition medicine plus high altitude medicine, NH has the very best of Ambulance services in the country.</p>
+    </div>
+  </div>
+</div>
+
+
+<div class="hospital-image-container">
+
+</div>
+
+
+<div class="mt-3 container-fluid">
+  <h4 style="color: #0AB8B7;" class="text-center py-3">Our Departments</h4>
+  <div class="row justify-content-between gap-3">
+    <div class="col-12 col-md-3">
+      <div class="card">
+        <img src="../../static/mainApp/images/cardio.jpg" class="card-img-top hover-zoom" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Cardio</h5>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-12 col-md-2">
+      <div class="card">
+        <img src="../../static/mainApp/images/cardio.jpg" class="card-img-top hover-zoom" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Cardio</h5>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-12 col-md-2">
+      <div class="card">
+        <img src="../../static/mainApp/images/cardio.jpg" class="card-img-top hover-zoom" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Cardio</h5>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-12 col-md-2">
+      <div class="card">
+        <img src="../../static/mainApp/images/cardio.jpg" class="card-img-top hover-zoom" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Cardio</h5>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-12 col-md-2">
+      <div class="card">
+        <img src="../../static/mainApp/images/cardio.jpg" class="card-img-top hover-zoom" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Cardio</h5>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-12 col-md-2">
+      <div class="card">
+        <img src="../../static/mainApp/images/cardio.jpg" class="card-img-top hover-zoom" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Cardio</h5>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+  {% endblock mainContent %}
