added departments and footer section

--- a/mainApp/templates/mainApp/index.html
+++ b/mainApp/templates/mainApp/index.html
@@ -62,60 +62,52 @@
 
 <div class="mt-3 container-fluid">
   <h4 style="color: #0AB8B7;" class="text-center py-3">Our Departments</h4>
-  <div class="row justify-content-between gap-3">
-    <div class="col-12 col-md-3">
+  <div class="row justify-content-between gy-3 department-container">
+    <div class="col-6 col-sm-4 col-md-3 col-lg-2">
       <div class="card">
-        <img src="../../static/mainApp/images/cardio.jpg" class="card-img-top hover-zoom" alt="...">
+        <img src="../../static/mainApp/images/cardio.jpg" class="card-img-top hover-zoom" alt="cardio">
         <div class="card-body">
           <h5 class="card-title">Cardio</h5>
         </div>
       </div>
     </div>
 
-    <div class="col-12 col-md-2">
+    <div class="col-6 col-sm-4 col-md-3 col-lg-2">
       <div class="card">
-        <img src="../../static/mainApp/images/cardio.jpg" class="card-img-top hover-zoom" alt="...">
+        <img src="../../static/mainApp/images/dental.jpg" class="card-img-top" alt="dental">
         <div class="card-body">
-          <h5 class="card-title">Cardio</h5>
+          <h5 class="card-title">Dental</h5>
         </div>
       </div>
     </div>
 
-    <div class="col-12 col-md-2">
+    <div class="col-6 col-sm-4 col-md-3 col-lg-2">
       <div class="card">
-        <img src="../../static/mainApp/images/cardio.jpg" class="card-img-top hover-zoom" alt="...">
+        <img src="../../static/mainApp/images/traumatology.jpg" class="card-img-top hover-zoom" alt="traumatology">
         <div class="card-body">
-          <h5 class="card-title">Cardio</h5>
+          <h5 class="card-title">Traumatology</h5>
         </div>
       </div>
     </div>
 
-    <div class="col-12 col-md-2">
+    <div class="col-6 col-sm-4 col-md-3 col-lg-2">
       <div class="card">
-        <img src="../../static/mainApp/images/cardio.jpg" class="card-img-top hover-zoom" alt="...">
+        <img src="../../static/mainApp/images/xray.jpg" class="card-img-top" alt="xray">
         <div class="card-body">
-          <h5 class="card-title">Cardio</h5>
+          <h5 class="card-title">Xray</h5>
         </div>
       </div>
     </div>
 
-    <div class="col-12 col-md-2">
+    <div class="col-6 col-sm-4 col-md-3 col-lg-2">
       <div class="card">
-        <img src="../../static/mainApp/images/cardio.jpg" class="card-img-top hover-zoom" alt="...">
+        <img src="../../static/mainApp/images/neurologist.jpg" class="card-img-top hover-zoom" alt="neurologist">
         <div class="card-body">
-          <h5 class="card-title">Cardio</h5>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-12 col-md-2">
-      <div class="card">
-        <img src="../../static/mainApp/images/cardio.jpg" class="card-img-top hover-zoom" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Cardio</h5>
+          <h5 class="card-title">Neurologist</h5>
         </div>
       </div>
     </div>
   </div>
 </div>
+
   {% endblock mainContent %}
