--- a/mainApp/static/mainApp/css/style.css
+++ b/mainApp/static/mainApp/css/style.css
@@ -57,3 +57,8 @@
     width: 100%;
     height: 450px;
 }
+
+.department-container div:hover{
+    transform: scale(1.1);
+    transition: transform 0.9s ease-in-out;
+}
