--- a/mainApp/templates/mainApp/base.html
+++ b/mainApp/templates/mainApp/base.html
@@ -72,6 +72,56 @@
 
 
 
+  <footer style="border-top: 5px solid #0AB8B7;" class="bg-light container-fluid mt-5">
+
+    <div class="row justify-content-between text-center mt-3 gy-5">
+      <div class="col-12 col-sm-6">
+        <h5>Quick links</h5>
+        <nav>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link text-secondary" href="{% url 'home'%}">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-secondary" href="{% url 'finddoctor' %}">Find a Doctor</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-secondary" href="{% url 'predictdiseases' %}">Predict Diseases</a>
+            </li>
+  
+            <li class="nav-item">
+              <a class="nav-link text-secondary" href="#">About us</a>
+            </li>
+  
+            <li class="nav-item">
+              <a class="nav-link text-secondary" href="#">Contact us</a>
+            </li>
+            </ul>
+        </nav>
+      </div>
+  
+      <div class="col-12 col-sm-6">
+        <h5>Contact Info</h5>
+        <div class="d-flex flex-column gap-3 justify-content-center">
+          <div>
+            <i class="fa-solid fa-location-dot"></i> <span class="text-secondary">Naxal, Kathmandu</span> 
+          </div> 
+          <div>
+            <i class="fa-solid fa-phone"></i> <a class="text-decoration-none text-secondary" href="tel:9860500572">9860500572</a>
+          </div> 
+
+          <div>
+            <i class="fa-solid fa-envelope"></i> <a class="text-decoration-none text-secondary" href = "mailto: sudiptamang000@gmail.com">info@nepalhospital.com</a>
+          </div> 
+
+        </div>
+      </div>
+    </div>
+    <p style="display:blocl; text-align: center;" class="mt-3 mb-3"> <u>Nepal Hospital &copy; 2022</u> </p>
+  </footer>
+
+
+
 
   <!-- Optional JavaScript; choose one of the two! -->
 
