added about us page

--- a/mainApp/templates/mainApp/index.html
+++ b/mainApp/templates/mainApp/index.html
@@ -5,7 +5,7 @@
 
 
 {% block slider %}
-<div style="border-top:5px solid #0AB8B7; border-bottom: 5px solid #0AB8B7;" id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+<div style="border-bottom: 5px solid #0AB8B7;" id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div style="max-height: 80vh;" class="carousel-inner">
       <div class="carousel-item active">
         <img src="{% static 'mainApp/images/cover1.png' %}" class="d-block img-fluid" alt="coverimage 1"> 
