--- a/mainApp/static/mainApp/css/style.css
+++ b/mainApp/static/mainApp/css/style.css
@@ -62,3 +62,12 @@
     transform: scale(1.1);
     transition: transform 0.9s ease-in-out;
 }
+
+.about-image-container{
+    background-image: url('../images/about.jpg');
+    background-size: cover;
+    width: 90%;
+    height: 350px;
+    margin: auto;
+
+}
