--- a/mainApp/templates/mainApp/base.html
+++ b/mainApp/templates/mainApp/base.html
@@ -23,7 +23,7 @@
 
 <body>
 
-  <nav id="main-header" class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav style="border-bottom: 5px solid #0AB8B7;" id="main-header" class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a id="header-logo" href="{% url 'home' %}">Nepal Hospital</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -41,13 +41,13 @@
           <li id="{{fdiseasesactive}}" class="nav-item">
             <a class="nav-link" href="{% url 'predictdiseases' %}">Predict Diseases</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About us</a>
+          <li id="{{aboutactive}}" class="nav-item">
+            <a class="nav-link" href="{% url 'aboutus' %}">About us</a>
           </li>
 
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="#">Contact us</a>
-          </li>
+          </li> -->
         </ul>
 
         <div class="d-flex gap-3">
@@ -90,12 +90,12 @@
             </li>
   
             <li class="nav-item">
-              <a class="nav-link text-secondary" href="#">About us</a>
+              <a class="nav-link text-secondary" href="{% url 'aboutus' %}">About us</a>
             </li>
   
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link text-secondary" href="#">Contact us</a>
-            </li>
+            </li> -->
             </ul>
         </nav>
       </div>
@@ -114,10 +114,16 @@
             <i class="fa-solid fa-envelope"></i> <a class="text-decoration-none text-secondary" href = "mailto: sudiptamang000@gmail.com">info@nepalhospital.com</a>
           </div> 
 
+          <div class="d-flex gap-3 justify-content-center">
+            <a href="https://facebook.com/" target="_blank"><span class="text-dark"><i class="fa-brands fa-facebook-square fa-2x"></i></span> </a>
+            <a href="https://instagram.com/" target="_blank"> <span class="text-dark"><i class="fa-brands fa-instagram-square fa-2x"></i></span></a>
+            <a href="https://tiktok.com/" target="_blank"><span class="text-dark"><i class="fa-brands fa-tiktok fa-2x"></i></span></a>
+          </div>
+
         </div>
       </div>
     </div>
-    <p style="display:blocl; text-align: center;" class="mt-3 mb-3"> <u>Nepal Hospital &copy; 2022</u> </p>
+    <p style="text-align: center;" class="mt-3 mb-3 text-dark"> <u>Nepal Hospital &copy; 2022</u> </p>
   </footer>
 
 
