--- a/appointment/templates/appointment/myappointments.html
+++ b/appointment/templates/appointment/myappointments.html
@@ -5,7 +5,8 @@
 
 {% block userDashContent %}
 {% if request.user|has_group:"patient" %}
-<h4 class="mb-3">My appointments </h4>
+<h4 class="mb-3">My pending dues appointments </h4>
+<!-- appointment whose payment dues is pending -->
 {% if myAppointments %}
 <div class="table-responsive">
     <table class="table table-striped table-hover">
@@ -34,10 +35,55 @@
                 <td>{{appointment.appointmentStatus}}</td>
                 <td>{{appointment.paymentStatus}}</td>
                 <td class="d-flex gap-3">
-                    {% if appointment.paymentStatus == 'pending'%}  <button id="payment-button" class="btn btn-sm btn-success">Pay with khalti</button>
-                   <Button onclick="delUserAppointment('{{appointment.id}}')" class="btn btn-sm btn-danger"><i class="fa-solid fa-calendar-check"></i> Cancel</Button>{% else %} 
-                    <button class="btn btn-sm btn-warning"><i class="fa-solid fa-file-invoice"></i> Print invoice</button>
-                   {% endif %}
+                    <Button onclick="delUserAppointment('{{appointment.id}}')"
+                        class="btn btn-sm btn-danger cancel-btn"><i class="fa-solid fa-calendar-check"></i>
+                        Cancel</Button>
+                </td>
+            </tr>
+            {% endfor %}
+            <tr>
+               <td style="text-align:right" colspan="8"><button id="payment-button" class="btn btn-sm btn-success">Pay with khalti</button></td> 
+            </tr>
+        </tbody>
+    </table>
+</div>
+{% else %}
+<h4 style="text-align: center;" class="bg-success p-2 text-dark bg-opacity-50 p-3 mt-5">You have no appointments with payment dues dues</h4>
+{% endif %}
+
+<!-- appointments whos payment is alredy done and yet to come -->
+<h4 class="mb-3">My appointments</h4>
+{% if myPaidAppointments %}
+<div class="table-responsive">
+    <table class="table table-striped table-hover">
+        <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Appointment id</th>
+                <th scope="col">Doctor</th>
+                <th scope="col">Date</th>
+                <th scope="col">Time</th>
+                <th scope="col">Appointment status</th>
+                <th scope="col">Payment status</th>
+                <th scope="col">Actions</th>
+            </tr>
+        </thead>
+
+
+        <tbody>
+            {% for appointment in myPaidAppointments %}
+            <tr>
+                <th scope="row">{{forloop.counter}}</th>
+                <td>{{appointment.id}}</td>
+                <td>{{appointment.doctor.fullName}}</td>
+                <td>{{appointment.appointmentDate}}</td>
+                <td>{{appointment.appointmentTime}}</td>
+                <td>{{appointment.appointmentStatus}}</td>
+                <td>{{appointment.paymentStatus}}</td>
+                <td class="d-flex gap-3">
+                    <button class="btn btn-sm btn-warning"><i class="fa-solid fa-file-invoice"></i> Print
+                        invoice</button>
+
                 </td>
             </tr>
 
@@ -49,6 +95,11 @@
 {% else %}
 <h4 style="text-align: center;" class="bg-success p-2 text-dark bg-opacity-50 p-3 mt-5">You have no appointments</h4>
 {% endif %}
+
+
+
+
+
 
 <h3 class="mb-3 mt-3">My past appointments</h3>
 {% if myPastAppointments %}
@@ -66,7 +117,7 @@
 
 
         <tbody>
-            {% for appointment in myAppointments %}
+            {% for appointment in myPastAppointments %}
             <tr>
                 <th scope="row">{{forloop.counter}}</th>
                 <td>{{appointment.id}}</td>
@@ -81,7 +132,8 @@
 </div>
 
 {% else %}
-<h4 style="text-align: center;" class="bg-success p-2 text-dark bg-opacity-50 p-3 mt-5">You have no past appointments</h4>
+<h4 style="text-align: center;" class="bg-success p-2 text-dark bg-opacity-50 p-3 mt-5">You have no past appointments
+</h4>
 {% endif %}
 
 {% endif %}
@@ -89,13 +141,12 @@
 
 <script>
 
-    function delUserAppointment(id)
-    {
-       
+    function delUserAppointment(id) {
+
         let c = confirm(`Are you sure you want to delete the appointment with id ${id} ?`)
-            if (c) {
-                location.href = `/scheduleAppointment/deleteuserappointment/${id}`
-            }
+        if (c) {
+            location.href = `/scheduleAppointment/deleteuserappointment/${id}`
+        }
     }
 
 </script>
