--- a/mainApp/templates/mainApp/aboutus.html
+++ b/mainApp/templates/mainApp/aboutus.html
@@ -5,7 +5,7 @@
 
 
 {% block mainContent%}
-<div style="position: relative;" class="container-fluid">
+<div style="position: relative;" class="container-fluid mt-5">
     <div class="about-image-container p-3">
         <h3 class="text-light" style="position: absolute; top: 50%;">About us</h3>
     </div>
