added print invoice features

--- a/appointment/templates/appointment/myappointments.html
+++ b/appointment/templates/appointment/myappointments.html
@@ -81,8 +81,7 @@
                 <td>{{appointment.appointmentStatus}}</td>
                 <td>{{appointment.paymentStatus}}</td>
                 <td class="d-flex gap-3">
-                    <button class="btn btn-sm btn-warning"><i class="fa-solid fa-file-invoice"></i> Print
-                        invoice</button>
+               <a href="{% url 'printinvoice' %}"><button class="btn btn-sm btn-warning"><i class="fa-solid fa-file-invoice"></i> Printinvoice</button></a>     
 
                 </td>
             </tr>
