modified invoce printing features completely

--- a/userAuth/templates/userAuth/viewDoctorAppointment.html
+++ b/userAuth/templates/userAuth/viewDoctorAppointment.html
@@ -102,7 +102,7 @@
                                     <button onclick="clearDue('{{app.id}}','{{app.doctor.id}}')" class="btn btn-sm btn-success">clear due</button>
                                 {% else %}
 
-                                <button class="btn btn-sm btn-warning">print invoice</button>
+                                <a href="{% url 'printinvoice' app.id %}"><button class="btn btn-sm btn-warning">print invoice</button></a>
                                 {% endif %}
                                 <button onclick="cancelAppointment('{{app.id}}','{{app.doctor.id}}')" class="btn btn-sm btn-danger">Cancel</button>
                             </td>
