--- a/appointment/templates/appointment/myappointments.html
+++ b/appointment/templates/appointment/myappointments.html
@@ -81,7 +81,7 @@
                 <td>{{appointment.appointmentStatus}}</td>
                 <td>{{appointment.paymentStatus}}</td>
                 <td class="d-flex gap-3">
-               <a href="{% url 'printinvoice' %}"><button class="btn btn-sm btn-warning"><i class="fa-solid fa-file-invoice"></i> Printinvoice</button></a>     
+               <a href="{% url 'printinvoice' appointment.id %}"><button class="btn btn-sm btn-warning"><i class="fa-solid fa-file-invoice"></i> Printinvoice</button></a>     
 
                 </td>
             </tr>
