--- a/userAuth/templates/userAuth/viewPatients.html
+++ b/userAuth/templates/userAuth/viewPatients.html
@@ -10,12 +10,12 @@
 
 <h4 style="text-align: center; margin-top: 40px;">Patients Lists</h4>
 
-<form style="width: 75%;">
+<!-- <form style="width: 75%;">
   <div class="mb-3 d-flex gap-1">
     <input type="search" class="form-control" placeholder="search patient with name"> <button
       class="btn btn-dark">Search</button>
   </div>
-</form>
+</form> -->
 <div class="table-responsive">
   <table class="table table-striped table-hover">
     <thead>
